force-app/main/default/objects/CAZ_SolicitudCredito__c/CAZ_SolicitudCredito__c.object-meta.xml
<CustomObject>
    <description>Almacena las solicitudes de ampliación de crédito de los distribuidores.</description>
    <label>Solicitud de Ampliación de Crédito</label>
    <nameField>
        <displayFormat>SAC-{00000}</displayFormat>
        <label>Folio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solicitudes de Ampliación de Crédito</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>