force-app/main/default/objects/CAZ_SolicitudCredito__c/fields/CAZ_Comentarios__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Comentarios__c</fullName>
    <description>Comentarios o justificación del requerimiento.</description>
    <label>Comentarios</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>