force-app/main/default/objects/CAZ_SolicitudCredito__c/fields/CAZ_ContactoSolicitante__c.field-meta.xml
<CustomField>
    <fullName>CAZ_ContactoSolicitante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contacto que originó la solicitud.</description>
    <label>Contacto Solicitante</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Solicitudes de Ampliación de Crédito</relationshipLabel>
    <relationshipName>Solicitudes_Ampliacion_Credito</relationshipName>
    <type>Lookup</type>
</CustomField>