force-app/main/default/objects/CAZ_SolicitudCredito__c/fields/CAZ_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Distribuidor asociado a la solicitud.</description>
    <label>Distribuidor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Solicitudes_Ampliacion_Credito</relationshipName>
    <type>Lookup</type>
</CustomField>