force-app/main/default/objects/CAZ_SolicitudCredito__c/fields/CAZ_Dias__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Dias__c</fullName>
    <description>Días de ampliación de crédito solicitados.</description>
    <label>Días</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>