force-app/main/default/objects/CAZ_SolicitudCredito__c/fields/CAZ_Estatus__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Estatus__c</fullName>
    <description>Estatus del proceso de ampliación.</description>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Borrador</fullName>
                <default>true</default>
                <label>Borrador</label>
            </value>
            <value>
                <fullName>Por atender</fullName>
            </value>
            <value>
                <fullName>En Revisión</fullName>
            </value>
            <value>
                <fullName>Autorizado</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>Completado</fullName>
            </value>
            <value>
                <fullName>En Análisis</fullName>
                <isActive>false</isActive>
                <label>En Análisis</label>
            </value>
            <value>
                <fullName>Nuevo</fullName>
                <isActive>false</isActive>
                <label>Nuevo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>