force-app/main/default/objects/CAZ_SolicitudCredito__c/fields/CAZ_Justificacion__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Justificacion__c</fullName>
    <description>Justificación del requerimiento.</description>
    <label>Justificación / Motivos</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>