force-app/main/default/objects/CAZ_SolicitudCredito__c/fields/CAZ_MontoSolicitado__c.field-meta.xml
<CustomField>
    <fullName>CAZ_MontoSolicitado__c</fullName>
    <description>Monto solicitado de ampliación de crédito.</description>
    <label>Monto Solicitado</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>