force-app/main/default/objects/CAZ_SolicitudCredito__c/fields/CAZ_MotivoRechazo__c.field-meta.xml
<CustomField>
    <fullName>CAZ_MotivoRechazo__c</fullName>
    <description>Motivo de rechazo de la solicitud de ampliación de crédito.</description>
    <label>Motivo de Rechazo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>