force-app/main/default/objects/CAZ_SolicitudCredito__c/fields/CAZ_PlazosCredito__c.field-meta.xml
<CustomField>
    <fullName>CAZ_PlazosCredito__c</fullName>
    <inlineHelpText>Campo interno para ser poblado exclusivamente por el equipo interno cruz azul</inlineHelpText>
    <label>Plazos de crédito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CTD</fullName>
                <label>Contado</label>
            </value>
            <value>
                <fullName>03D</fullName>
                <label>3 días</label>
            </value>
            <value>
                <fullName>07D</fullName>
                <label>7 días</label>
            </value>
            <value>
                <fullName>15D</fullName>
                <label>15 días</label>
            </value>
            <value>
                <fullName>21D</fullName>
                <label>21 días</label>
            </value>
            <value>
                <fullName>30D</fullName>
                <label>30 días</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>