force-app/main/default/objects/CAZ_SolicitudCredito__c/fields/CAZ_Resolucion__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Resolucion__c</fullName>
    <description>Almacena el motivo de rechazo o aceptación dictaminado por el ejecutivo.</description>
    <label>Resolución</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>