force-app/main/default/objects/CAZ_SolicitudCredito__c/fields/CAZ_RFC__c.field-meta.xml
<CustomField>
    <fullName>CAZ_RFC__c</fullName>
    <description>Registro Federal de Contribuyentes para la solicitud.</description>
    <label>RFC</label>
    <length>13</length>
    <type>Text</type>
</CustomField>