force-app/main/default/objects/CAZ_SolicitudCredito__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CAZ_RFC__c</columns>
    <columns>CAZ_MontoSolicitado__c</columns>
    <columns>CAZ_Estatus__c</columns>
    <columns>CAZ_Justificacion__c</columns>
    <columns>CAZ_Cuenta__c</columns>
    <columns>CAZ_Dias__c</columns>
    <columns>CAZ_ContactoSolicitante__c</columns>
    <columns>CAZ_Resolucion__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo></sharedTo>
</ListView>