force-app/main/default/objects/CAZ_SolicitudCredito__c/listViews/CAZ_Gerentes_Credito_CAZ_SolicitudCredito.listView-meta.xml
<ListView>
    <fullName>CAZ_Gerentes_Credito_CAZ_SolicitudCredito</fullName>
    <filterScope>Queue</filterScope>
    <label>Gerentes de Crédito</label>
    <queue>CAZ_Gerentes_Credito</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>