force-app/main/default/objects/CAZ_SolicitudCredito__c/listViews/CAZ_Juridico_CAZ_SolicitudCredito1.listView-meta.xml
<ListView>
    <fullName>CAZ_Juridico_CAZ_SolicitudCredito1</fullName>
    <filterScope>Queue</filterScope>
    <label>Jurídico</label>
    <queue>CAZ_Juridico</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>