force-app/main/default/objects/CAZ_SolicitudCredito__c/listViews/CreditoCobranza_CAZ_SolicitudCredito1.listView-meta.xml
<ListView>
    <fullName>CreditoCobranza_CAZ_SolicitudCredito1</fullName>
    <filterScope>Queue</filterScope>
    <label>Crédito y Cobranza</label>
    <queue>CreditoCobranza</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>